# llm-server-from-scratch

./: Makefile  README.md  client.html  main.py  pyproject.toml
src/: __init__.py  env.py  logger.py  model.py  server.py  utils.py
src/model/: asr.py  base.py  llm.py
