[project]
name = "llm-serving-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.2",
]

[dependency-groups]
dev = [
    "datasets[audio]>=4.0.0",
    "pyright>=1.1.404",
    "ruff>=0.12.9",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length = 120
indent-width = 4
fix = true  # to fix linting errors

[tool.ruff.lint]
# Select rules for linting; 'F401' covers unused imports, 'I' covers import sorting
select = ["F401", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
